--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="images/dan-modified.png" alt="Dan profile picture" width="300" height="300"></td>
+      <td><img src="images/Cv_picture.png" alt="Dan profile picture" width="300" height="300"></td>
       <td>  <h1> Dan Curavale </h1>
         <p> <em>Machine learning Engineer at Madenn Audio</em></p>
         <a href="https://www.linkedin.com/in/dan-curavale-9ab383250"><b>Linkedin Profile</b></a>
@@ -30,7 +30,6 @@
   <h3>Personal projects and achievements</h3>
   <ul>
     <li><strong>1st place</strong> at the 2022 <a href="https://www.facebook.com/463439803706422/posts/5470778382972514/">Scientific Communication Sesion </a> of the Politechnical University of Bucharest </li>
-    <li></li>
   </ul>
   <hr size:3>
   <h3>Work experience</h3>
